
syntax = "proto3";

package vapi;

service VApi {
   rpc Ping(PingRequest) returns (PingResponse) {}
   rpc ListFiles(ListRequest) returns (ListResponse) {}
   rpc GetConfig(ConfigRequest) returns (ConfigResponse) {}

}

// primitives
message File {
   string name = 1;
   int64 size = 2;
   int64 mtime = 3;
   bool is_dir = 4;
}

// RPC Ping
message PingRequest {
   string message = 1;
};
message PingResponse {
   string message = 1;
};


// RPC ListFiles
message ListRequest {
   string user = 1;
   string path = 2;
};
message ListResponse {
   ListRequest request = 1;
   bool is_dir = 2;
   string layout = 3;
   string url_prefix = 4;
   string remote_server = 5;
   string rel_path = 6;
   string local_path = 7;
   repeated File Files = 8;
};

// RPC GetConfig
message ConfigRequest {
   string user = 1;
};
message ConfigResponse {
   repeated string allow = 1;
   map <string, string> alias = 2;
   map <string, string> servers = 3;
};
